--- a/Html/Mobs-Type/Mobs-Carnivore.html
+++ b/Html/Mobs-Type/Mobs-Carnivore.html
@@ -36,9 +36,9 @@
             </li>
             <li class="deroulant"><a href="../Lore.html">Lore</a>
                 <ul class="sous">
-                    <li><a href="LandPods.html">LandPods &ensp;</a></li>
-                    <li><a href="PDA.html">PDA &ensp;</a></li>
-                    <li><a href="Other.html">Other &ensp;</a></li>
+                    <li><a href="../Lore/LandPods.html">LandPods &ensp;</a></li>
+                    <li><a href="../Lore/PDA.html">PDA &ensp;</a></li>
+                    <li><a href="../Lore/Other.html">Other &ensp;</a></li>
                 </ul>
             </li>
             <li><a href="../Link.html">Link</a></li>
@@ -59,8 +59,10 @@
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Blood Kelp Caves
+                            <br>- Blood Kelp Zone
+                            <br>- Bulb Zone
                             </li>
                         </ul>
                     </tr>
@@ -76,8 +78,11 @@
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Deep Grand Reef
+                            <br>- Northern Blood Kelp Caves
+                            <br>- Northern Blood Kelp Zone
+                            <br>- Lost River
                             </li>
                         </ul>
                     </tr>
@@ -86,15 +91,19 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Mesmer
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Mesmer_Fauna.png" title="Mesmer" alt="Mesmer_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Bulb Zone
+                            <br>- Crag Field
+                            <br>- Kelp Forest Caves
+                            <br>- Lost River
+                            <br>- Northeastern Mushroom Forest
                             </li>
                         </ul>
                     </tr>
@@ -103,15 +112,16 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Sea Dragon
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Sea_Dragon_Leviathan_Fauna.png" title="Sea Dragon" alt="Sea_Dragon_Leviathan_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Inactive Lava Zone
+                            <br>- Lava Lakes
                             </li>
                         </ul>
                     </tr>
@@ -120,15 +130,15 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Sea Emperor Leviathan
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Sea_Emperor_Fauna.png" title="Sea Emperor Leviathan" alt="Sea_Emperor_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Primary Containment Facility Aquarium
                             </li>
                         </ul>
                     </tr>
@@ -137,15 +147,18 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Ghost Leviathan
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Ghost_Leviathan_Fauna.png" title="Ghost Leviathan" alt="Ghost_Leviathan_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Bones Field
+                            <br>- Ghost Forest
+                            <br>- Mountains Corridor
+                            <br>- Crater Edge
                             </li>
                         </ul>
                     </tr>
@@ -154,15 +167,18 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Reaper Leviathan
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Reaper_Leviathan_Fauna.png" title="Reaper Leviathan" alt="Reaper_Leviathan_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Crash Zone
+                            <br>- Crash Zone Mesas
+                            <br>- Dunes
+                            <br>- Mountains
                             </li>
                         </ul>
                     </tr>
@@ -171,15 +187,18 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Lava Lizard
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Lava_Lizard_Fauna.png" title="Lava Lizard" alt="Lava_Lizard_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Inactive Lava Zone Corridor
+                            <br>- Inactive Lava Zone
+                            <br>- Lava Lakes
+                            <br>- Lava Castle
                             </li>
                         </ul>
                     </tr>
@@ -188,15 +207,20 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Biter
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Biter_Fauna.png" title="Biter" alt="Biter_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Crash Zone Mesas
+                            <br>- Grassy Plateaus
+                            <br>- Grassy Plateaus Caves
+                            <br>- Jellyshroom Cave
+                            <br>- Mountains
+                            <br>- Mountains Caves
                             </li>
                         </ul>
                     </tr>
@@ -205,15 +229,16 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Crashfish
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Crash_Fauna.png" title="Crashfish" alt="Crash_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Kelp Forest Caves
+                            <br>- Safe Shallows Caves
                             </li>
                         </ul>
                     </tr>
@@ -222,15 +247,16 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Blighter
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Blighter_Fauna.png" title="Blighter" alt="Blighter_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Blood Kelp Caves
+                            <br>- Blood Kelp Zone
                             </li>
                         </ul>
                     </tr>
@@ -239,15 +265,20 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Boneshark
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Boneshark_Fauna.png" title="Boneshark" alt="Boneshark_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Bulb Zone
+                            <br>- Crag Field
+                            <br>- Crash Zone Mesas
+                            <br>- Mushroom Forest
+                            <br>- Primary Containment Facility Aquarium
+                            <br>- Underwater Islands
                             </li>
                         </ul>
                     </tr>
@@ -256,15 +287,17 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Sand Shark
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Sand_Shark_Fauna.png" title="Sand Shark" alt="Sand_Shark_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Crash Zone
+                            <br>- Dunes
+                            <br>- Grassy Plateaus
                             </li>
                         </ul>
                     </tr>
@@ -273,15 +306,18 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Stalker
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Stalker_Fauna.png" title="Stalker" alt="Stalker_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Crash Zone
+                            <br>- Kelp Forest
+                            <br>- Kelp Forest Caves
+                            <br>- Primary Containment Facility Aquarium
                             </li>
                         </ul>
                     </tr>
@@ -290,15 +326,15 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : River Prowler
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/River_Prowler_Fauna.png" title="River Prowler" alt="River_Prowler_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Lost River
                             </li>
                         </ul>
                     </tr>
@@ -307,15 +343,15 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Crabsnake
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Crabsnake_Fauna.png" title="Crabsnake" alt="Crabsnake_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Jellyshroom Cave
                             </li>
                         </ul>
                     </tr>
@@ -324,15 +360,15 @@
             <div>
                 <table>
                     <tr>
-                        Name : 
+                        Name : Warper 
                     </tr>
                     <tr>
-                        <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                        <img class="Images-Mobs" src="../../Images/Mobs/Carnivores/Warper_Fauna.png" title="Warper " alt="Warper_Fauna.png">
                     </tr>
                     <tr>
                         <ul>
-                            <li>Locations :
-                                - 
+                            <li>Locations : <br>
+                                - Every Biomes
                             </li>
                         </ul>
                     </tr>
