--- a/Html/Mobs-Type/Mobs-Herbivore.html
+++ b/Html/Mobs-Type/Mobs-Herbivore.html
@@ -36,28 +36,31 @@
             </li>
             <li class="deroulant"><a href="../Lore.html">Lore</a>
                 <ul class="sous">
-                    <li><a href="LandPods.html">LandPods &ensp;</a></li>
-                    <li><a href="PDA.html">PDA &ensp;</a></li>
-                    <li><a href="Other.html">Other &ensp;</a></li>
+                    <li><a href="../Lore/LandPods.html">LandPods &ensp;</a></li>
+                    <li><a href="../Lore/PDA.html">PDA &ensp;</a></li>
+                    <li><a href="../Lore/Other.html">Other &ensp;</a></li>
                 </ul>
             </li>
             <li><a href="../Link.html">Link</a></li>
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+    <div class="Mobs-Herbivores-Text">
+        Herbivores
+    </div>
     <div class="Dispo-Mobs">
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Boomerang
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Boomerang_Fauna.png" title="Boomerang" alt="Boomerang_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Every Biomes
                         </li>
                     </ul>
                 </tr>
@@ -66,15 +69,18 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Cuddlefish
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Cuddlefish_Fauna.png" title="Cuddlefish" alt="Cuddlefish_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : (Egg) <br>
+                            - Deep Grand Reef Degasi Base
+                        <br>- Dunes Sinkhole
+                        <br>- Lost River Laboratory Cache
+                        <br>- Mushroom Forest Caves
                         </li>
                     </ul>
                 </tr>
@@ -83,15 +89,19 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Garryfish
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Garryfish_Fauna.png" title="Garryfish" alt="Garryfish_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Crash Zone Mesas Dunes
+                        <br>- Primary Containment Facility Aquarium
+                        <br>- Safe Shallows
+                        <br>- Safe Shallows Caves
+                        <br>- Underwater Islands
                         </li>
                     </ul>
                 </tr>
@@ -100,15 +110,17 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Gasopod
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Gasopod_Fauna.png" title="Gasopod" alt="Gasopod_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Crash Zone Mesas
+                        <br>- Dunes
+                        <br>- Safe Shallows
                         </li>
                     </ul>
                 </tr>
@@ -117,15 +129,20 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Holefish
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Holefish_Fauna.png" title="Holefish" alt="Holefish_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Bulb Zone Caves
+                        <br>- Crash Zone
+                        <br>- Mushroom Forest Caves
+                        <br>- Primary Containment Facility Aquarium
+                        <br>- Safe Shallows
+                        <br>- Safe Shallows Caves
                         </li>
                     </ul>
                 </tr>
@@ -134,15 +151,18 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Hoverfish
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Hoverfish_Fauna.png" title="Hoverfish" alt="Hoverfish_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Crash Zone
+                        <br>- Crash Zone Mesas
+                        <br>- Kelp Forest
+                        <br>- Primary Containment Facility Aquarium
                         </li>
                     </ul>
                 </tr>
@@ -151,15 +171,17 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Magmarang
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Magmarang_Fauna.png" title="Magmarang" alt="Magmarang_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Inactive Lava Zone
+                        <br>- Inactive Lava Zone Corridor
+                        <br>- Lava Lakes
                         </li>
                     </ul>
                 </tr>
@@ -168,15 +190,22 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Eyeye
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Eyeye_Fauna.png" title="Eyeye" alt="Eyeye_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Bulb Zone
+                        <br>- Crash Zone
+                        <br>- Dunes
+                        <br>- Grand Reef
+                        <br>- Jellyshroom Cave
+                        <br>- Kelp Forest
+                        <br>- Sea Treader's Path
+                        <br>- Sea Treader's Tunnel Caves
                         </li>
                     </ul>
                 </tr>
@@ -185,15 +214,17 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Red Eyeye
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Red_Eyeye_Fauna.png" title="Red Eyeye" alt="Red_Eyeye_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Inactive Lava Zone
+                        <br>- Inactive Lava Zone Corridor
+                        <br>- Lava Lakes
                         </li>
                     </ul>
                 </tr>
@@ -202,15 +233,16 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Oculus
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Oculus_Fauna.png" title="Oculus" alt="Oculus_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Jellyshroom Cave
+                        <br>- Primary Containment Facility Aquarium
                         </li>
                     </ul>
                 </tr>
@@ -219,15 +251,15 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Peeper
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Peeper_Fauna.png" title="Peeper" alt="Peeper_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Every Biomes
                         </li>
                     </ul>
                 </tr>
@@ -236,15 +268,17 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Sea Treader Leviathan
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Sea_Treader_Leviathan_Fauna.png" title="Sea Treader Leviathan" alt="Sea_Treader_Leviathan_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Grand Reef
+                        <br>- Sea Treader's Path
+                        <br>- Sea Treader's Tunnel Caves
                         </li>
                     </ul>
                 </tr>
@@ -253,15 +287,23 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Bladderfish
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Bladderfish_Fauna.png" title="Bladderfish" alt="Bladderfish_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Crash Zone Mesas
+                        <br>- Dunes
+                        <br>- Grand Reef
+                        <br>- Grassy Plateaus
+                        <br>- Kelp Forest
+                        <br>- Lost River
+                        <br>- Mushroom Forest
+                        <br>- Primary Containment Facility Aquarium
+                        <br>- Safe Shallows
                         </li>
                     </ul>
                 </tr>
@@ -270,15 +312,25 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Hoopfish
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Hoopfish_Fauna.png" title="Hoopfish" alt="Hoopfish_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Bulb Zone
+                        <br>- Crag Field
+                        <br>- Dunes
+                        <br>- Grand Reef
+                        <br>- Grassy Plateaus
+                        <br>- Kelp Forest
+                        <br>- Mountains
+                        <br>- Primary Containment Facility Aquarium
+                        <br>- Sea Treader's Path
+                        <br>- Sea Treader's Tunnel Caves
+                        <br>- Underwater Islands
                         </li>
                     </ul>
                 </tr>
@@ -287,15 +339,18 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Skyray
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Skyray_Fauna.png" title="Skyray" alt="Skyray_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Crash Zone
+                        <br>- Floating Island
+                        <br>- Mountain Island
+                        <br>- Lifepod 5
                         </li>
                     </ul>
                 </tr>
@@ -304,15 +359,19 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Rabbit Ray
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Rabbit_Ray_Fauna.png" title="Rabbit Ray" alt="Rabbit_Ray_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Crash Zone
+                        <br>- Crash Zone Mesas
+                        <br>- Kelp Forest
+                        <br>- Primary Containment Facility Aquarium
+                        <br>- Safe Shallows
                         </li>
                     </ul>
                 </tr>
@@ -321,20 +380,97 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Jellyray
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Jellyray_Fauna.png" title="Jellyray" alt="Jellyray_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Deep Grand Reef
+                        <br>- Mushroom Forest
                         </li>
                     </ul>
                 </tr>
             </table>
         </div>
+        <div>
+            <table>
+                <tr>
+                    Name : Crimson Ray
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Crimson_Ray_Fauna.png" title="Crimson Ray" alt="Crimson_Ray_Fauna.png">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations : <br>
+                            - Inactive Lava Zone
+                        <br>- Lava Lakes
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : Ghostray
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Ghostray_Fauna.png" title="Ghostray" alt="Ghostray_Fauna.png">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations : <br>
+                            - Lost River
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : Reefback
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Reefback_Leviathan_Fauna.png" title="Reefback" alt="Reefback_Leviathan_Fauna.png">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations : <br>
+                            - Blood Kelp Zone
+                        <br>- Bulb Zone
+                        <br>- Crag Field
+                        <br>- Grassy Plateaus
+                        <br>- Mushroom Forest
+                        <br>- Sparse Reef
+                        <br>- Underwater Islands
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    Name : Reginald
+                </tr>
+                <tr>
+                    <img class="Images-Mobs" src="../../Images/Mobs/Herbivores/Reginald_Fauna.png" title="Reginald" alt="Reginald_Fauna.png">
+                </tr>
+                <tr>
+                    <ul>
+                        <li>Locations : <br>
+                            - Every Biomes
+                        </li>
+                    </ul>
+                </tr>
+            </table>
+        </div>
+
     </div>
     </div>
 </body>
