--- a/Html/Mobs-Type/Mobs-Mort.html
+++ b/Html/Mobs-Type/Mobs-Mort.html
@@ -36,28 +36,34 @@
             </li>
             <li class="deroulant"><a href="../Lore.html">Lore</a>
                 <ul class="sous">
-                    <li><a href="LandPods.html">LandPods &ensp;</a></li>
-                    <li><a href="PDA.html">PDA &ensp;</a></li>
-                    <li><a href="Other.html">Other &ensp;</a></li>
+                    <li><a href="../Lore/LandPods.html">LandPods &ensp;</a></li>
+                    <li><a href="../Lore/PDA.html">PDA &ensp;</a></li>
+                    <li><a href="../Lore/Other.html">Other &ensp;</a></li>
                 </ul>
             </li>
             <li><a href="../Link.html">Link</a></li>
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+    <div class="Mobs-Extinct-Species-Text">
+        Extinct Species
+    </div>
     <div class="Dispo-Mobs">
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Peeper Alpha
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Extinct species/Unknown.png" title="Peeper Alpha" alt="Unknown.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Age : <br>
+                            - N/A
+                        </li>
+                        <li>Locations : <br>
+                            - Unknown
                         </li>
                     </ul>
                 </tr>
@@ -66,15 +72,18 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Species Alpha Ray	
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Extinct species/Unknown.png" title="Species Alpha Ray" alt="Unknown.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Age : <br>
+                            - N/A
+                        </li>
+                        <li>Locations : <br>
+                            - Unknown
                         </li>
                     </ul>
                 </tr>
@@ -83,15 +92,18 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Ancient Skeleton
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Extinct species/Ancient_Skeleton_Fauna.png" title="Ancient Skeleton" alt="Ancient_Skeleton_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Age : <br>
+                            - ~1,000,000 years (Dead)
+                        </li>
+                        <li>Locations : <br>
+                            - Lost River Laboratory Cache
                         </li>
                     </ul>
                 </tr>
@@ -100,15 +112,19 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Gargantuan Fossil
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Extinct species/Gargantuan_Fossil_Fauna.png" title="Gargantuan Fossil" alt="Gargantuan_Fossil_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Age : <br>
+                            - ~3,000,000 years (Dead)
+                        </li>
+                        <li>Locations : <br>
+                            - Lost River Bones Field
+                        <br>- Lost River Ghost Forest
                         </li>
                     </ul>
                 </tr>
@@ -117,224 +133,23 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Research Specimen Theta
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Extinct species/Research_Specimen_Theta_Fauna.png" title="Research Specimen Theta" alt="Research_Specimen_Theta_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Age : <br>
+                            - ~1000 years (Dead)
+                        </li>
+                        <li>Locations : <br>
+                            - Disease Research Facility
                         </li>
                     </ul>
                 </tr>
             </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
+        </div>    
     </div>
     </div>
 </body>
