--- a/Html/Mobs-Type/Parasite.html
+++ b/Html/Mobs-Type/Parasite.html
@@ -36,28 +36,33 @@
             </li>
             <li class="deroulant"><a href="../Lore.html">Lore</a>
                 <ul class="sous">
-                    <li><a href="LandPods.html">LandPods &ensp;</a></li>
-                    <li><a href="PDA.html">PDA &ensp;</a></li>
-                    <li><a href="Other.html">Other &ensp;</a></li>
+                    <li><a href="../Lore/LandPods.html">LandPods &ensp;</a></li>
+                    <li><a href="../Lore/PDA.html">PDA &ensp;</a></li>
+                    <li><a href="../Lore/Other.html">Other &ensp;</a></li>
                 </ul>
             </li>
             <li><a href="../Link.html">Link</a></li>
         </ul>
         </nav>
     <!--Fin : Bare de navigation (Menu déroulant)-->
+    <div class="Mobs-Scavengers-and-Parasites-Text">
+        Scavengers and Parasites
+    </div>
     <div class="Dispo-Mobs">
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Amoeboid
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Scavengers and Parasites/Amoeboid_Fauna.png" title="Amoeboid" alt="Amoeboid_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Disease Research Facility
+                        <br>- Lost River
+                        <br>- Lost River Laboratory Cache
                         </li>
                     </ul>
                 </tr>
@@ -66,15 +71,17 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Ancient Floater
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Scavengers and Parasites/Ancient_Floater_Fauna.png" title="Ancient Floater" alt="Ancient_Floater_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Floating Island
+                        <br>- Northern Blood Kelp Zone
+                        <br>- Underwater Islands
                         </li>
                     </ul>
                 </tr>
@@ -83,15 +90,16 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Floater
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Scavengers and Parasites/Floater_Fauna.png" title="Floater" alt="Floater_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Grassy Plateaus
+                        <br>- Safe Shallows
                         </li>
                     </ul>
                 </tr>
@@ -100,15 +108,17 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Laval Larva
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Scavengers and Parasites/Lava_Larva_Fauna.png" title="Laval Larva" alt="Lava_Larva_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Inactive Lava Zone
+                        <br>- Inactive Lava Zone Corridor
+                        <br>- Lava Lakes
                         </li>
                     </ul>
                 </tr>
@@ -117,15 +127,20 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Cave Crawler
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Scavengers and Parasites/Cave_Crawler.png" title="Cave Crawler" alt="Cave_Crawler.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Aurora
+                        <br>- Dunes
+                        <br>- Floating Island
+                        <br>- Mountain Island
+                        <br>- Primary Containment Facility Aquarium
+                        <br>- Underwater Islands Caves
                         </li>
                     </ul>
                 </tr>
@@ -134,15 +149,18 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Blood Crawler
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Scavengers and Parasites/Blood_Crawler_Fauna.png" title="Blood Crawler" alt="Blood_Crawler_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Blood Kelp Zone
+                        <br>- Blood Kelp Caves
+                        <br>- Lost River
+                        <br>- Ghost Forest
                         </li>
                     </ul>
                 </tr>
@@ -151,15 +169,18 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Bleeder
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Scavengers and Parasites/Bleeder_Fauna-0.png" title="Bleeder" alt="Bleeder_Fauna-0.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Aurora
+                        <br>- Deep Sparse Reef
+                        <br>- Kelp Forest
+                        <br>- Lost River
                         </li>
                     </ul>
                 </tr>
@@ -168,15 +189,26 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Shuttlebug
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Scavengers and Parasites/Shuttlebug.png" title="Shuttlebug" alt="Shuttlebug.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Bulb Zone
+                        <br>- Crag Field
+                        <br>- Crash Zone
+                        <br>- Deep Sparse Reef
+                        <br>- Dunes
+                        <br>- Grassy Plateaus Caves
+                        <br>- Mountains
+                        <br>- Mushroom Forest Caves
+                        <br>- Primary Containment Facility Aquarium
+                        <br>- Safe Shallows Caves
+                        <br>- Sea Treader's Path
+                        <br>- Sparse Reef
                         </li>
                     </ul>
                 </tr>
@@ -185,151 +217,19 @@
         <div>
             <table>
                 <tr>
-                    Name : 
+                    Name : Rockgrub
                 </tr>
                 <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
+                    <img class="Images-Mobs" src="../../Images/Mobs/Scavengers and Parasites/Rockgrub_Fauna.png" title="Rockgrub" alt="Rockgrub_Fauna.png">
                 </tr>
                 <tr>
                     <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
-                        </li>
-                    </ul>
-                </tr>
-            </table>
-        </div>
-        <div>
-            <table>
-                <tr>
-                    Name : 
-                </tr>
-                <tr>
-                    <img class="Images-Mobs" src="../../Images/Mobs" title="" alt="">
-                </tr>
-                <tr>
-                    <ul>
-                        <li>Locations :
-                            - 
+                        <li>Locations : <br>
+                            - Bulb Zone Caves
+                        <br>- Deep Sparse Reef
+                        <br>- Dunes
+                        <br>- Grassy Plateaus Caves
+                        <br>- Mountains Caves
                         </li>
                     </ul>
                 </tr>
